Change: スキーマのタイプを明示的になるよう変更
